--- a/resources.qrc
+++ b/resources.qrc
@@ -4,6 +4,7 @@
         <file>resources/images/icon_music.png</file>
         <file>resources/images/icon_nav.png</file>
         <file>resources/images/icon_reverse2.png</file>
+	<file>resources/images/icon_ac.png</file>
         <file>resources/images/play_circle_icon.png</file>
         <file>resources/images/pause_circle_icon.png</file>
         <file>resources/images/arrow_back_icon.png</file>
